# sfiltering

./: CMakeLists.txt  README.md
cmake/: Doxyfile.in  sfilteringBuild.cmake  sfilteringConfig.cmake.in  sfilteringDependencies.cmake  sfilteringSetTestEnvironment.cmake.in  sfilteringUse.cmake.in
src/: CMakeLists.txt
src/sfiltering/: CMakeLists.txt  SConvolve.cpp  SConvolve.h  SFilteringShortcuts.cpp  SFilteringShortcuts.h  SGaussian3dFilter.cpp  SGaussian3dFilter.h  SGaussianFilter.cpp  SGaussianFilter.h  SGradient.cpp  SGradient.h  SGradientFilter.cpp  SGradientFilter.h  SMeanFilter.cpp  SMeanFilter.h  SMedianFilter.cpp  SMedianFilter.h  SMinMaxFilter.cpp  SMinMaxFilter.h  SVarianceFilter.cpp  SVarianceFilter.h
tests/: CMakeLists.txt
