############################################################
#
# $Id$
#
# Copyright (c) SFiltering 2010
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Options
## #################################################################

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( sfiltering )